Wed Sep 22 00:20:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in server/gam_excludes.c server/gam_server.c: applied
	  a patch to cleanup dnotify and inotify duality from Martin Schlemmer

Tue Sep 21 13:30:11 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.10
	* libgamin/fam.h libgamin/gam_api.c: fixing an API/ABI incompatibility
	  between FAM and gamin about FAMErrno and FamErrlist, which though
	  in fam-2.6.10 are documented as not used, should close bug #132944

Mon Sep 20 17:18:23 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/config.html doc/*: added documentation for the config file.

Mon Sep 20 16:21:24 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in server/Makefile.am server/gam_poll.c: applied a
	  portability patch from Michael Banck
	* server/gam_excludes.c server/gam_poll.c: added support for
	  a per-user configuration file $HOME/.gaminrc , and some 
	  fprintf cleanups

Fri Sep  3 23:33:57 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/*.html: providing more documentation.

Fri Sep  3 15:29:47 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* NEWS TODO doc/gamin.html doc/news.html: updating for the recent
	  releases and rebuilt.

Wed Sep  1 17:22:16 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: released 0.0.9

Wed Sep  1 15:50:49 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/Makefile.am server/gam_excludes.c server/gam_excludes.h
	  server/gam_poll.c server/gam_server.c: starting to add exclude
	  support where given path do no get kernel monitoring. Currently
	  statically excludes /mnt//* /media//* . Something more dynamic
	  might be needed.

Wed Sep  1 10:27:49 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_data.c: try to fix crashes with
	  konqueror, Red Hat bug #130967

Mon Aug 30 11:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>
