@@ -167,39 +167,50 @@ esac],[os=${target_os}])
 dnl check what OS we're on
 AM_CONDITIONAL(HAVE_LINUX, test x$os = xlinux-gnu)
 
+# We use polling no matter what.
+AC_DEFINE(ENABLE_POLLING,1,[Use polling as backend])
+backends="polling"
+
 if test x$os = xlinux-gnu; then
 	AC_DEFINE([HAVE_LINUX],[],[Whether we are using linux or not])
-	
-	# We enable dnotify no matter what.  If the user enables
-	# inotify, he will still have dnotify to fall back on ...
+fi	
+
+if test x$os = xlinux-gnu; then
+	AC_ARG_ENABLE(dnotify,
+	[  --disable-dnotify Disable the DNotify backend],
+	[case "${enableval}" in
+	  yes) dnotify=true ;;
+	  no)  dnotify=false ;;
+	  *) AC_MSG_ERROR(bad value ${enableval} for --disable-dnotify) ;;
+	esac],[dnotify=true])
+fi
+
+dnl check if dnotify backend is enabled
+AM_CONDITIONAL(ENABLE_DNOTIFY, test x$dnotify = xtrue)
+
+if test x$dnotify = xtrue; then
 	AC_DEFINE(ENABLE_DNOTIFY,1,[Use dnotify as backend])
-	backend="dnotify"
-else
-	backend="polling"
+	backends="${backends}, dnotify"
 fi
 
-# We do not care about inotify for now - if the user enables
-# it, we still want to build dnotify support ...
-AM_CONDITIONAL(ENABLE_DNOTIFY, test x$backend = xdnotify)
-
-AC_ARG_ENABLE(inotify,
-[  --enable-inotify Uses inotify as backend],
-[case "${enableval}" in
-  yes) backend="inotify" ;;
-  no) ;;
-  *) AC_MSG_ERROR(bad value ${enableval} for --enable-inotify) ;;
-esac])
-
-if test x$backend = xinotify; then
-    AC_DEFINE(ENABLE_INOTIFY,1,[Use inotify as backend])
-else
-    # If all else fails, use polling
-    if test x$backend = xpolling; then
-        AC_DEFINE(ENABLE_POLLING,1,[Use polling as backend])
-    fi
+if test x$os = xlinux-gnu; then
+	AC_ARG_ENABLE(inotify,
+	[  --disable-inotify Disable the INotify backend],
+	[case "${enableval}" in
+	  yes) inotify=true ;;
+	  no) inotify=false;;
+	  *) AC_MSG_ERROR(bad value ${enableval} for --disable-inotify) ;;
+	esac],[inotify=true])
 fi
 
-AM_CONDITIONAL(ENABLE_INOTIFY, test x$backend = xinotify)
+dnl check if inotify backend is enabled
+AM_CONDITIONAL(ENABLE_INOTIFY, test x$inotify = xtrue)
+
+if test x$inotify = xtrue; then
+	AC_CHECK_HEADERS(linux/inotify.h)
+	AC_DEFINE(ENABLE_INOTIFY,1,[Use inotify as backend])
+	backends="${backends}, inotify"
+fi
 
 dnl check for flavours of varargs macros (test from GLib)
 AC_MSG_CHECKING(for ISO C99 varargs macros in C)
@@ -326,6 +337,6 @@ gamin-$VERSION:
         source code location:     ${srcdir}
         compiler:                 ${CC}
                                                                                 
-	backend:                  ${backend}
+	backends:                 ${backends}
 	build documentation:      ${build_docs}
 "
